# langchain-learn

./: .env  pyproject.toml
.ipynb_checkpoints/: hello-checkpoint.ipynb  pyproject-checkpoint.toml
notebooks/第一章/: openAi.ipynb
notebooks/第二章 入门/: Langchain入门.ipynb
