[project]
name = "langchain-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "notebook>=7.5.5",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
